; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_varchar.c_anychar_typmodout.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_varchar.c_anychar_typmodout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VARHDRSZ = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [5 x i8] c"(%d)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64)* @anychar_typmodout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @anychar_typmodout(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  store i64 %0, i64* %2, align 8
  %4 = call i64 @palloc(i32 64)
  %5 = inttoptr i64 %4 to i8*
  store i8* %5, i8** %3, align 8
  %6 = load i64, i64* %2, align 8
  %7 = load i64, i64* @VARHDRSZ, align 8
  %8 = icmp sgt i64 %6, %7
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = load i64, i64* %2, align 8
  %12 = load i64, i64* @VARHDRSZ, align 8
  %13 = sub nsw i64 %11, %12
  %14 = trunc i64 %13 to i32
  %15 = call i32 @snprintf(i8* %10, i32 64, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %14)
  br label %18

16:                                               ; preds = %1
  %17 = load i8*, i8** %3, align 8
  store i8 0, i8* %17, align 1
  br label %18

18:                                               ; preds = %16, %9
  %19 = load i8*, i8** %3, align 8
  ret i8* %19
}

declare dso_local i64 @palloc(i32) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
